Added the referral token
With this change a unique referral token is created for each POST
and PUT of /bootparameters. This referral token is included in the
bootscript string. It can be used by a client to verify that boot
parameters and resulting bootscript are the parameters that they
previously set.

Jira: CASMHMS-4903
