# api/swagger.yaml
@@ -351,6 +351,11 @@ paths:
       responses:
         '201':
           description: successfully created boot parameters
+          headers:
+            BSS-Referral-Token:
+              schema:
+                type: string
+                description: The UUID that will be included in the boot script. A new UUID is generated on each POST and PUT request.
         '400':
           description: Bad Request - Invalid BootParams value
           schema:
@@ -405,6 +410,11 @@ paths:
       responses:
         '200':
           description: successfully update boot parameters
+          headers:
+            BSS-Referral-Token:
+              schema:
+                type: string
+                description: The UUID that will be included in the boot script. A new UUID is generated on each POST and PUT request.
         '400':
           description: Bad Request - Invalid BootParams value
           schema:
